OldArchive/a8deb63ff033fb40af864e22e48b2f83-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:2:34: error: template declaration of ‘TIterator ReverseEncodeOneBytes’
 TIterator ReverseEncodeOneBytes( charcodepoint c, TIterator bytes ) const {
                                  ^
main.cpp:2:34: error: ‘charcodepoint’ was not declared in this scope
main.cpp:2:61: error: expected primary-expression before ‘bytes’
 TIterator ReverseEncodeOneBytes( charcodepoint c, TIterator bytes ) const {
                                                             ^
main.cpp:7:27: error: template declaration of ‘TIterator EncodeOneBytes’
 TIterator EncodeOneBytes( charcodepoint c, TIterator bytes ) const {
                           ^
main.cpp:7:27: error: ‘charcodepoint’ was not declared in this scope
main.cpp:7:54: error: expected primary-expression before ‘bytes’
 TIterator EncodeOneBytes( charcodepoint c, TIterator bytes ) const {
                                                      ^
